--- a/css/style.scss
+++ b/css/style.scss
@@ -9,7 +9,7 @@ body {
 .video-container {
     display: flex;
     width: 100%;
-    //transform: translate(-25%);
+    transform: translateX(25%);
 }
 
 video {
