--- a/css/style.scss
+++ b/css/style.scss
@@ -10,12 +10,14 @@ body {
     display: flex;
     width: 100%;
     transform: translateX(25%);
+    transition: transform 0.5s ease-in-out;
 }
 
 video {
     width: 25%;
     opacity: 0.5;
     cursor: pointer;
+    transition: all 0.5s;
 }
 
 video.selected {
