--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(180deg, #18259F 0%, #FA6715 106.57%);
+    background: linear-gradient( 135deg , rgba(255,95,162,1) 0%,rgba(252,200,155,1) 100%);
 }
 
 .video-container {
