--- a/css/style.scss
+++ b/css/style.scss
@@ -37,3 +37,16 @@ video.selected {
     height: 80px;
     cursor: pointer;
 }
+
+#start.rotating {
+    animation: rotating 2s linear infinite;
+}
+
+@keyframes rotating {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+ }
