--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,7 @@ video.selected {
     opacity: 1;
 }
 
-#start {
+#play-button {
     position: absolute;
     left: 30px;
     bottom: 30px;
@@ -38,7 +38,7 @@ video.selected {
     cursor: pointer;
 }
 
-#start.rotating {
+#play-button.rotating {
     animation: rotating 2s linear infinite;
 }
 
