--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,7 @@ video {
     cursor: pointer;
     opacity: 0.5;
     transition: all 0.5s;
+    flex-shrink: 0;
     //-webkit-box-reflect: below 0 linear-gradient(transparent, white);
 }
 
